deploy/kubernetes/base/frontend/backend-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: frontend
spec:
  type: ExternalName
  externalName: backend-service.backend.svc.cluster.local
  ports:
    - port: 8000
      targetPort: 8000
      name: http
